<?xml version="1.0" encoding="utf-8"?>

<!--
    File:  activity_main.xml

    Author: Justin Lange
    This assignment represents my own work and is in accordance with the College Academic Policy

    Copyright(c) 2019 All Right Reserved by Justin Lange

    Date: 28-02-19
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgRockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/rock_button_description"
        android:onClick="handlePlayerMove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock_button" />

    <ImageView
        android:id="@+id/imgPaperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/paper_button_description"
        android:onClick="handlePlayerMove"
        app:layout_constraintEnd_toStartOf="@+id/imgScissorsButton"
        app:layout_constraintStart_toEndOf="@+id/imgRockButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper_button" />

    <ImageView
        android:id="@+id/imgScissorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/scissors_button_description"
        android:onClick="handlePlayerMove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scissor_button" />

    <ImageView
        android:id="@+id/imgPlayerMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="125dp"
        android:contentDescription="@string/player_move_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/none_button" />

    <ImageView
        android:id="@+id/imgComputerMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="125dp"
        android:contentDescription="@string/computer_move_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/none_button" />

    <TextView
        android:id="@+id/txtPlayerMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/player_move_initial_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/imgPlayerMove"
        app:layout_constraintStart_toStartOf="@+id/imgPlayerMove"
        app:layout_constraintTop_toBottomOf="@+id/imgPlayerMove" />

    <TextView
        android:id="@+id/txtComputerMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/computer_move_initial_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/imgComputerMove"
        app:layout_constraintStart_toStartOf="@+id/imgComputerMove"
        app:layout_constraintTop_toBottomOf="@+id/imgComputerMove" />

    <TextView
        android:id="@+id/txtGameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/result_initial_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>